fixed horizontal scrolling issue

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,6 +34,13 @@ html {
     scroll-behavior: smooth;
 }
 
+html,
+body,
+#app {
+    width: 100%;
+    overflow-x: clip;
+}
+
 body {
     margin: 0;
     min-height: 100vh;
